--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
     />
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
